@@ -31,6 +31,10 @@ Working version
 
 ### Manual and documentation:
 
+- #9228: Various Map documentation improvements: add missing key argument in
+  the 'merge' example; clarify the relationship between input and output keys
+  in 'union'; note that find and find_opt return values, not bindings.
+  (Jeremy Yallop, review by Gabriel Scherer and Florian Angeletti)
 
 ### Compiler user-interface and warnings:
 
